<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/studAddButtons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/btnStudGroupAddSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/btnStudAddGroupCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/studAddButtons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/name" />
            <EditText
                android:id="@+id/studGroupName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/surname" />
            <EditText
                android:id="@+id/studGroupSurname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" >
            </EditText>
            <TextView
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="@string/second_name" />
            <EditText
                android:id="@+id/studGroupSecondName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/birthdate" />
            <EditText
                android:id="@+id/studGroupBirthdate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>