<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/groupAddButtons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/btnGroupAddSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/btnGroupAddCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/groupAddButtons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="@string/group_num" />
            <EditText
                android:id="@+id/groupNumber"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
            <TextView
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:text="@string/faculty" />
            <EditText
                android:id="@+id/groupFaculty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>