<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/studAddButtons"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:id="@+id/btnStudAddSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/btnStudAddCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

    </LinearLayout>

    <ScrollView
        android:layout_above="@id/studAddButtons"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
                    <TextView
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal" />
                    <EditText
                        android:id="@+id/studName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/surname" android:textAlignment="center"
                        android:layout_gravity="center_horizontal"/>
                    <EditText
                        android:id="@+id/studSurname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" >
                    </EditText>
                    <TextView
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:text="@string/second_name" android:textAlignment="center"
                        android:layout_gravity="center_horizontal"/>
                    <EditText
                        android:id="@+id/studSecondName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/group"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/studGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:text="@string/birthdate"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"></TextView>

                <DatePicker
                    android:id="@+id/studBirthdate"
                    android:layout_width="325dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"></TextView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>